--- a/www/index.html
+++ b/www/index.html
@@ -146,7 +146,7 @@
           setHash(document.getElementById('query').value)
         }
         function initQuery() {
-          setQuery(window.location.hash.substr(1))
+          setQuery(decodeURI(window.location.hash.substr(1)))
           // console.log('foo');
         }
 
@@ -173,7 +173,7 @@
               history.pushState(null, null, '#' + h);
           }
           else {
-              location.hash = '#' + h;
+              window.location.hash = '#' + encodeURI(h);
           }
         }
     </script>
