--- a/www/index.html
+++ b/www/index.html
@@ -230,19 +230,19 @@
 
             <div class="col-xs-9 col-xs-offset-3 col-lg-10 col-lg-offset-2 main" ng-if="indexVM.query == null ? true : false">
 
-                <!-- <pre class="rong">            __  __                                     _                       _
+                <pre class="rong">            __  __                                     _                       _
     o O O|  \/  |   ___    _ __     ___      _ _    (_)    __ _    __ _     | |
    o     | |\/| |  / -_)  | '  \   / _ \    | '_|   | |   / _` |  / _` |    | |
   TS__[O]|_|__|_|  \___|  |_|_|_|  \___/   _|_|_   _|_|_  \__,_|  \__,_|   _|_|_
  {======|_|"""""|_|"""""|_|"""""|_|"""""|_|"""""|_|"""""|_|"""""|_|"""""|_|"""""|
 ./o--000'"`-0-0-'"`-0-0-'"`-0-0-'"`-0-0-'"`-0-0-'"`-0-0-'"`-0-0-'"`-0-0-'"`-0-0-'
-</pre> -->
+</pre>
 
                 <h1>EESTI KOMMUNISMIOHVRID 1940–1991</h1>
 
                 <div class="col-xs-12">
                   <div class="intro">
-                    2018. aasta augustis avatakse Tallinnas Maarjamäel memoriaal kommunistliku režiimi terrori ohvritele Eestis 1940–1991.
+                    2018. aasta augustis avati Tallinnas Maarjamäel memoriaal kommunistliku režiimi terrori ohvritele Eestis 1940–1991.
                   </div>
 
                   <div class="intro">
@@ -250,34 +250,8 @@
                   </div>
                 </div>
 
-                <div class="col-xs-8">
-                  <h2>Hukkunute nimekiri</h2>
-
-                  <div class="intro">
-                    <a class="bg-info" style="padding: 0.1em" href="http://memoriaal.ee/Kommunismiohvrite%20memoriaali%20nimekiri.html">Memoriaali mälestusseinale 23. augustiks kantavate isikute nimekiri</a> on lõplik. Sellega tutvumiseks kliki pildil. Edasised parandused on võimalik sisse viia vaid elektroonilisse väljundisse.
-                  </div>
-                </div>
-
-                <a class="col-xs-4" href="http://memoriaal.ee/Kommunismiohvrite%20memoriaali%20nimekiri.html">
-                  <img src="Kommunismiohvrite-memoriaal-teekond.jpg" width="100%"/>
-                </a>
 
                 <div class="col-xs-12">
-
-                  <h2>Kõigi kannatanute andmebaas</h2>
-
-                  <div class="intro">
-                    Lisaks terrori läbi hukkunutele tehakse elektrooniliselt kättesaadavaks ka kõikide teiste kannatanute nimed, sealhulgas need, kes vangistusest või asumiselt vabanesid; need, kes kuulusid küüditamisele, kuid keda ei küüditatud ja need, kelle saatus on teadmata. Kõigi nende nimed on leitavad siit kodulehelt.
-                  </div>
-
-                  <div class="intro">
-                    Palume kontrollida Teile teadaolevate represseeritute nimesid ning kui vaja, meile paranduste ja täienduste osas tagasisidet anda. Teretulnud on ettepanekud ka juhul, kui kahe nimekuju puhul on tegemist tõenäoliselt sama isikuga ja tekib kahtlus, et erinevad kirjed oleks tarvis siduda.
-                  </div>
-
-                  <div class="intro">
-                    Oleme paranduste ja täienduste eest väga tänulikud. Nendest on juba olnud suur abi hukkunute nimestiku koostamisel. Aktsepteeritud parandused viime sisse jooksvalt, seega täieneb ja muutub nimekiri pidevalt.
-                  </div>
-
 
                   <h1>Nimekirjadesse kuulumise alused</h1>
 
